--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,9 @@ body h1,h2,h3,h4,h5,h6{
     min-height:650px;
 	position: relative;
 }
+.corner{
+    border-radius: 30px;
+}
 .top-header {
 	padding: 2em 0;
 }
